# delhivery_assignment

./: README.md
central_logger/: package.xml  setup.cfg  setup.py
central_logger/central_logger/: central_logging_node.py  log_publisher.py
central_logger/test/: test_central_logger.py
config/: log_codes.yaml  robot_config_params.yaml  trajectory_map.yaml
interfaces/: CMakeLists.txt  package.xml
interfaces/msg/: AllLogs.msg  NavData.msg  RobotStatus.msg  TargetPose.msg  TaskQueue.msg
path_planning/: package.xml  setup.py
path_planning/path_planning/: graph.py
robot_navigator/: package.xml  setup.py
robot_navigator/launch/: all_nodes_bringup.launch.py
robot_navigator/robot_navigator/: navigation_node.py  status_node.py
robot_navigator/test/: test_flake8.py  test_navigation_test.py  test_status.py
task_manager/: package.xml  setup.py
task_manager/task_manager/: task_manager_node.py
task_manager/test/: test_task_manager.py
utils/: package.xml  setup.py
utils/utils/: file_sys_utils.py  service_logger.py  yaml_editor.py
